fixed gap in admin post cards + added jtitle in ap

--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -162,6 +162,7 @@ body::-webkit-scrollbar {
     width: 100%;
     height: 100%;
     display: flex;
+    gap: 25px;
     justify-content: center;
     flex-wrap: wrap;
 }
